--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
+    <title>Ruby on Rails | <%= @title %></title>
     <%= csrf_meta_tag %>
+	<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
+    <%= stylesheet_link_tag 'blueprint/print',  :media => 'print' %>
+    <%= stylesheet_link_tag 'custom',  :media => 'screen' %>
   </head>
   <body>
-    <%= yield %>
+	<div class="container">
+	      <header>
+	        <%= image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+	        <nav class="round">
+	          <ul>
+	            <li><%= link_to "Home", '#' %></li>
+	            <li><%= link_to "Help", '#' %></li>
+	            <li><%= link_to "Sign in", '#' %></li>
+	          </ul>
+	        </nav>
+	      </header>
+	      <section class="round">
+	        <%= yield %>
+	      </section>
+			<footer>
+			  <nav class="round">
+			    <ul>
+			      <li><%= link_to "About", '#' %></li>
+			      <li><%= link_to "Contact", '#' %></li>
+			      <li><a href="http://news.railstutorial.org/">News</a></li>
+			      <li><a href="http://www.railstutorial.org/">Rails Tutorial</a></li>
+			    </ul>
+			  </nav>
+			</footer>
+	    </div>
   </body>
 </html>
