--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
   <body>
 	<div class="container">
 	      <header>
-	        <%= image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+			<% logo = image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+			<%= link_to logo, root_path %>
 	        <nav class="round">
 	          <ul>
-	            <li><%= link_to "Home", '#' %></li>
-	            <li><%= link_to "Help", '#' %></li>
+	            <li><%= link_to "Home", root_path %></li>
+	            <li><%= link_to "Help", help_path %></li>
 	            <li><%= link_to "Sign in", '#' %></li>
 	          </ul>
 	        </nav>
@@ -25,8 +26,8 @@
 			<footer>
 			  <nav class="round">
 			    <ul>
-			      <li><%= link_to "About", '#' %></li>
-			      <li><%= link_to "Contact", '#' %></li>
+			      <li><%= link_to "About", about_path %></li>
+			      <li><%= link_to "Contact", contact_path %></li>
 			      <li><a href="http://news.railstutorial.org/">News</a></li>
 			      <li><a href="http://www.railstutorial.org/">Rails Tutorial</a></li>
 			    </ul>
